# BareMetal_Conan

./: CMakeLists.txt  conanfile.txt  launch_build.sh  main.cpp
cmake/: arm-gcc-toolchain.cmake  arm-none-eabi-toolchain-conan  base.cmake  nrf52_specific.cmake
cmake/nordic_sdk/: nordic_postbuild.cmake
